# Decision-Tree

./: .gitignore  LICENSE  README.md  pyproject.toml
src/decision_tree_lib/: __init__.py  base_tree.py  c45.py  cart.py  id3.py  utils.py
