[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decision_tree_from_scratch_LucasCarneiro"
version = "0.0.1"
authors = [
  { name="Lucas Carneiro", email="lucascarneiromalta@gmail.com" },
]
description = "Uma implementação do zero dos algoritmos de árvore de decisão ID3, C4.5 e CART."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/lucascarneiro1202/Decision-Tree"